--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/covid-test/bootstrap/css/bootstrap.min.css">
      <link rel="stylesheet" href="/Covid-test/project.css">
      <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-    <title>Covid 19 General Health Tips</title>
+    <title>Covid 19 General Health Tips for Africa</title>
 </head>
 <body>
 
